--- a/MelorLojaCliente/app/src/main/res/values/strings.xml
+++ b/MelorLojaCliente/app/src/main/res/values/strings.xml
@@ -41,4 +41,11 @@
     <string name="confirm_order">Confirmar pedido</string>
     <string name="order_value">Valor do pedido</string>
     <string name="description">Descrição</string>
+    <string name="delivery_method">Método de Entrega</string>
+    <string name="on_the_way">A caminho</string>
+    <string name="delivery">Entrega</string>
+    <string name="delivery_address">Endereço de entrega</string>
+    <string name="observation">Observação</string>
+    <string name="add_observation">Adicionar observação</string>
+    <string name="products">Produtos</string>
 </resources>
